--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -115,3 +115,14 @@ body{
  .inactive {
   color: gray;
  }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
