Highlighted Navbar Item Fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -126,3 +126,8 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.activeNav {
+  font-weight: 800;
+  color: rgb(247, 247, 4); /* Or any other style you want to apply to the active link */
+ }
