Service page fixed- Ruban

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -131,3 +131,23 @@ input[type=number] {
   font-weight: 800;
   color: rgb(247, 247, 4); /* Or any other style you want to apply to the active link */
  }
+
+
+ /* //arrow in upcoming groups  */
+ .nextArrow, .prevArrow {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #fff;
+  padding: 10px;
+  border-radius: 5px;
+ }
+ 
+ .nextArrow {
+  right: 10px;
+ }
+ 
+ .prevArrow {
+  left: 10px;
+ }
